added media queries for flex

--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -17,10 +17,6 @@ a {
   text-decoration: none;
 }
 
-header {
-  font-size: 10px;
-}
-
 /* Navigation bar */
 .navBar {
   display: flex;
@@ -32,8 +28,8 @@ header {
 h1 {
   font-size: 50px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  margin-left: 50px;
   padding: 20px;
+  background-color: #be9b7b;
 }
 
 ul {
@@ -80,60 +76,48 @@ li a:hover {
   right: 0;
 }
 
-/* Section heading styling */
-h2, h3 {
-  margin-top: 20px;
-  font-size: 50px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  margin-left: 50px;
-}
-
 .about-paragraph {
   padding: 20px;
   font-size: 20px;
   clear: none;
 }
 
-th {
-  border-right: 3px solid black;
+/* Section heading styling */
+
+h3 {
+  margin-top: 20px;
   font-size: 50px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  padding: 10px;
-  text-align: end;
-  vertical-align: top;
+  margin-left: 10px;
+  margin-right: 30px;
+  text-wrap: wrap;
 }
 
-td {
-  height: 50px;
+.about-paragraph {
+  border-left: 3px solid black;
 }
 
-#empty-row{
-  border-right: 3px solid #e9e5dc;
+.aboutMe,
+.contact, .work {
+  display: flex;
+  justify-content:flex-start;
+  margin: 50px 50px;
+  padding-bottom: 20px;
 }
+
 /* Work Container styling */
 
-.subHeading {
-  text-align: center;
-  border-bottom: 3px solid black;
-  width: 300px;
-  margin: 50px auto;
-}
-
 #categoryGrid {
-  margin: 0px 5%;
+  padding: 10px;
+  border-left: 3px solid black;
   display: grid;
   grid-template-rows: 300px 300px 300px;
   grid-template-columns: 1fr 1fr;
   grid-template-areas:
-  "code-refactor code-refactor"
-  "project2  project3"
-  "project4 project5"
-  ;
-}
-.category-grid-cell {
-  width: 90%; 
-  max-width: 500px; 
-  overflow: hidden; 
+    "code-refactor code-refactor"
+    "project2  project3"
+    "project4 project5";
+  flex-grow: 1;
 }
 
 #code-refactor {
@@ -142,7 +126,7 @@ td {
   border: 3px solid #be9b7b;
 }
 
-#refactor-img{
+#refactor-img {
   max-width: 100%;
   max-height: 100%;
   width: auto;
@@ -186,7 +170,7 @@ td {
 }
 
 .heading {
-  background-color: rgba(0,0,0,0.7);
+  background-color: rgba(0, 0, 0, 0.7);
   padding: 5px;
   color: white;
   font-size: 25px;
@@ -202,21 +186,17 @@ td {
 }
 
 /* Contact me section styling */
-.contact {
-  display: flex;
-  align-items: center;
-  margin-left: 0;
-  padding-bottom: 20px;
-}
-
 .contact p {
   font-size: 20px;
   padding: 50px;
 }
 
+.contact-links {
+  border-left: 3px solid black;
+}
+
 a {
   margin: 5px 20px;
-  display: inline-flex;
   cursor: pointer;
 }
 
@@ -238,46 +218,48 @@ footer a {
   margin-left: 50px;
 }
 
+
+@media only screen and (max-width: 1053px) {
+  .navBar {
+    text-align: center;
+    display: block;
+  }
+
+  .navBar ul {
+    text-align: center;
+  }
+
+  .navBar li {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+
+  .aboutMe,
+  .work,
+  .contact {
+    flex-direction: column;
+  }
+
+  .about-paragraph,
+  .contact-links {
+    border: none;
+  }
+
+  #categoryGrid {
+    border: none;
+  }
+
+  h3 {
+    border-bottom: 3px solid black;
+  }
+}
+
 /* Media Queries */
-@media only screen and (max-width: 375px) {
+@media only screen (min-width: 0px) and (max-width: 481px) {
   header {
     padding: 5px;
   }
 
-  .heading {
-    font-size: 10px;
-  }
-}
-
-@media (max-width: 695px) {
-  .navBar {
-    align-items: center;
-  }
-
-}
-
-@media only screen and (max-width: 1024px) {
-  .navBar {
-    flex-wrap: wrap;
-    flex-basis: calc(33.33% - 20px);
-  }
-
-  .navBar li {
-    margin: 5px;
-  }
-
-  .hero-image {
-    height: 500px;
-  }
-
-  #bio-image {
-    object-fit: contain;
-    width: 600px;
-  }
-
-}
-
-@media only screen and (max-width: 640px) {
   .navBar {
     text-align: center;
     flex-direction: column;
@@ -295,26 +277,106 @@ footer a {
     font-size: 50px;
   }
 
-  .hero-banner {
-    height: 200px;
+  .about-paragraph {
+    font-size: 15px;
   }
 
   .page-wrapper {
     text-align: left;
     flex-direction: column;
+  }}
+
+
+  @media only screen (min-width: 482px) and (max-width: 768px) {
+    .navBar {
+      text-align: center;
+    }
+
+    nav ul {
+      display: inline-flex;
+    }
+
+    nav li {
+      margin: 0.8em 0;
+    }
+
+    h1 {
+      font-size: 30px;
+    }
+
+    .about-paragraph {
+      font-size: 15px;
+    }
+
+    .page-wrapper {
+      text-align: left;
+      flex-direction: column;
+    }
   }
 
-  #work,
-  #contact {
-    font-size: 30px;
+  @media only screen (min-width: 769px) and (max-width: 1025px) {
+    .navBar {
+      text-align: center;
+      flex-direction: column;
+    }
+
+    nav ul {
+      flex-direction: column;
+    }
+
+    nav li {
+      margin: 0.8em 0;
+    }
+
+    h1 {
+      font-size: 30px;
+    }
+
+    .hero-image {
+      height: 500px;
+    }
+
+    #bio-image {
+      object-fit: contain;
+      width: 600px;
+    }
+
+    .about-paragraph {
+      font-size: 15px;
+    }
+
+    .page-wrapper {
+      text-align: left;
+      flex-direction: column;
+    }
+
+    .hero-banner {
+      height: 200px;
+    }
   }
 
-  .project {
-    margin-left: 50px;
-    margin-right: 50px;
-  }
+  @media only screen and (max-width: 1053px) {
+    .navBar {
+      text-align: center;
+      display: block;
+    }
 
-  .about-paragraph {
-    font-size: 15px;
+    .navBar ul {
+      text-align: center;
+    }
+
+    .navBar li {
+      margin-top: 5px;
+      margin-bottom: 5px;
+    }
+
+    .categoryGridArea {
+      position: relative;
+      z-index: 1;
+      margin-top: 20px;
+    }
+
+    .about-paragraph {
+      margin-top: 20px;
+    }
   }
-}
