--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -15,6 +15,8 @@ body {
 /* Remove underline from all links */
 a {
   text-decoration: none;
+  margin: 5px;
+  cursor: pointer;
 }
 
 /* Navigation bar */
@@ -76,33 +78,40 @@ li a:hover {
   right: 0;
 }
 
-.about-paragraph {
+
+/* Section heading styling */
+.aboutMe h3, .work h3, .contact h3{
+  font-size: 50px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  margin-right: 15px;
+  text-align: end;
   padding: 20px;
+}
+
+.aboutMe,.work,
+  .contact {
+  display: flex;
+  justify-content:flex-start;
+  padding: 20px;
+}
+
+.aboutMe h3{
+  margin-left: 20px;
+}
+
+.about-paragraph {
+  padding: 15px;
+  margin-left: 5px;
   font-size: 20px;
   clear: none;
 }
 
-/* Section heading styling */
-
-h3 {
-  margin-top: 20px;
-  font-size: 50px;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  margin-left: 10px;
-  margin-right: 30px;
-  text-wrap: wrap;
+.work h3{
+  margin-left: 20px;
 }
 
 .about-paragraph {
   border-left: 3px solid black;
-}
-
-.aboutMe,
-.contact, .work {
-  display: flex;
-  justify-content:flex-start;
-  margin: 50px 50px;
-  padding-bottom: 20px;
 }
 
 /* Work Container styling */
@@ -186,18 +195,11 @@ h3 {
 }
 
 /* Contact me section styling */
-.contact p {
-  font-size: 20px;
-  padding: 50px;
-}
 
 .contact-links {
   border-left: 3px solid black;
-}
-
-a {
-  margin: 5px 20px;
-  cursor: pointer;
+  font-size: 20px;
+  padding: 60px;
 }
 
 a:hover {
@@ -256,6 +258,7 @@ footer a {
 
 /* Media Queries */
 @media only screen (min-width: 0px) and (max-width: 481px) {
+
   header {
     padding: 5px;
   }
@@ -283,8 +286,8 @@ footer a {
 
   .page-wrapper {
     text-align: left;
-    flex-direction: column;
-  }}
+  }
+}
 
 
   @media only screen (min-width: 482px) and (max-width: 768px) {
