--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -238,9 +238,10 @@ footer p {
 Media Queries for small and medium screen size
 **************************************************
 */
-@media only screen and (min-width: 0px) and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   header {
     display: inline;
+    width: 100%;
   }
 
   h1 {
@@ -256,11 +257,13 @@ Media Queries for small and medium screen size
 
   .navBar ul {
     text-align: center;
+    width:100%;
   }
 
   .navBar li {
     margin-top: 5px;
     margin-bottom: 5px;
+    width:100%;
   }
 
   .hero-image {
@@ -333,14 +336,9 @@ Media Queries for small and medium screen size
   }
 }
 
-@media only screen and (min-width: 769px) and (max-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   header {
     display: inline;
-    width: 100%;
-  }
-
-  h1 {
-    display: inline-block;
     width: 100%;
   }
 
@@ -365,7 +363,14 @@ Media Queries for small and medium screen size
   }
 
   .about-paragraph {
-    font-size: 15px;
+    border: none;
+    /* display: inline-block; */
+    /* width: 100%;
+    margin-left: 30px; */
+    text-align: justify;
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-left: 0;
   }
 
   .aboutMe,
@@ -377,9 +382,6 @@ Media Queries for small and medium screen size
   }
 
   .about-paragraph {
-    border: none;
-    display: inline-block;
-    width: 100%;
     margin-left: 40px;
     padding: 10px;
   }
@@ -388,8 +390,8 @@ Media Queries for small and medium screen size
     border: none;
     display: -ms-inline-grid;
     justify-content: center;
-    width: 95%;
     margin-left: 40px;
+    margin-right: 15px;
   }
 
   .aboutMe h3,
@@ -408,15 +410,11 @@ Media Queries for small and medium screen size
   .contact-links {
     border: none;
     flex-direction: column;
-    display: inline-block;
     width: 100%;
     text-align: center;
-    margin-left: 40px;
   }
 
   footer p {
-    width: 100%;
     text-align: center;
-    margin-left: 40px;
   }
 }
