adjusted rel path to banner in CSS

--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -72,7 +72,7 @@ Banner section
   position: relative;
   background-position: 0px 0px;
   height: 700px;
-  background-image: url("/starter/assets/images/hero-banner.PNG");
+  background-image: url("../images/hero-banner.PNG");
   background-repeat: no-repeat;
   background-size: cover;
   border-bottom: 3px solid black;
