--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -52,7 +52,6 @@ h1 {
 }
 
 ul {
-  display: inline-flex;
   font-size: 20px;
 }
 
@@ -239,36 +238,16 @@ Media Queries for small and medium screen size
 */
 @media only screen and (max-width: 768px) {
 
-  header {
-    display: inline;
-    width: 100%;
-  }
-
   h1 {
-    display: inline-block;
-    width: 100%;
+    border-top: 3px solid black;
   }
 
   .navBar {
     text-align: center;
-    display: inline-block;
-    width: 100%;
   }
 
-  .navBar ul {
-    text-align: center;
-    width:100%;
-  }
-
-  .navBar li {
-    margin-top: 5px;
-    margin-bottom: 5px;
-    width:100%;
-  }
-
-  .hero-image {
-    display: inline-block;
-    width: 100%;
+  ul {
+    border-bottom: 3px solid black;
   }
 
   .about-paragraph {
@@ -280,22 +259,15 @@ Media Queries for small and medium screen size
   .contact {
     flex-direction: column;
     display: inline;
-    width: 100%;
   }
 
   .about-paragraph {
-    border: none;
-    display: inline-block;
-    width: 100%;
-    margin-left: 40px;
-    margin-right: 50px;
-    padding: 10px;
+    display: inline;
   }
 
   #categoryGrid {
     border: none;
     justify-content: center;
-    margin-left: 50px;
     grid-template-columns: 90vw;
     grid-template-rows: repeat(5, 200px);
     grid-template-areas:
@@ -312,8 +284,7 @@ Media Queries for small and medium screen size
     border-bottom: 3px solid black;
     text-align: left;
     display: inline-block;
-    width: 100%;
-    margin-left: 50px;
+    width: 50%;
   }
 
   br {
@@ -324,49 +295,30 @@ Media Queries for small and medium screen size
     border: none;
     flex-direction: column;
     display: inline-block;
-    width: 100%;
     text-align: center;
-    margin-left: 40px;
   }
 
   footer p {
-    width: 100%;
     text-align: center;
-    margin-left: 40px;
   }
 }
 
 @media only screen and (max-width: 1024px) {
-  header {
-    display: inline;
-    width: 100%;
+  h1 {
+    border-top: 3px solid black;
   }
 
   .navBar {
     text-align: center;
-    display: inline-block;
-    width: 100%;
+    display: inline;
   }
 
-  .navBar ul {
-    text-align: center;
-  }
-
-  .navBar li {
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
-
-  .hero-image {
-    display: inline-block;
-    width: 100%;
+  ul {
+    border-bottom: 3px solid black;
   }
 
   .about-paragraph {
     border: none;
-    /* display: inline-block; */
-    /* width: 100%;
-    margin-left: 30px; */
     text-align: justify;
     margin-left: 15px;
     margin-right: 15px;
@@ -376,22 +328,14 @@ Media Queries for small and medium screen size
   .aboutMe,
   .work,
   .contact {
+    padding: 20px;
     flex-direction: column;
-    display: inline;
-    width: 100%;
-  }
-
-  .about-paragraph {
-    margin-left: 40px;
-    padding: 10px;
   }
 
   #categoryGrid {
     border: none;
     display: -ms-inline-grid;
     justify-content: center;
-    margin-left: 40px;
-    margin-right: 15px;
   }
 
   .aboutMe h3,
@@ -399,9 +343,7 @@ Media Queries for small and medium screen size
   .contact h3 {
     border-bottom: 3px solid black;
     text-align: left;
-    width: 100%;
-    margin-left: 50px;
-  }
+    }
 
   br {
     display: none;
@@ -410,7 +352,6 @@ Media Queries for small and medium screen size
   .contact-links {
     border: none;
     flex-direction: column;
-    width: 100%;
     text-align: center;
   }
 
