--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -332,6 +332,21 @@ Media Queries for small and medium screen size
   }
 }
 
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  h1 {
+    border-top: 3px solid black;
+  }
+
+  .navBar {
+    text-align: center;
+    display: inline-block;
+  }
+
+  ul {
+    border-bottom: 3px solid black;
+  }
+}
+
 @media only screen and (max-width: 1024px) {
   h1 {
     border-top: 3px solid black;
